[package]
name = "food"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
clap = { version = "2.33", features = [ "suggestions", "color" ] }
regex = "1.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
fwalker = "0.3"
rand = "0.7"
chrono = "0.4"
itertools = "0.9"
cfg-if = "0.1.2"
wasm-bindgen = "=0.2.65"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }

[build-dependencies]
built = { version = "0.4", features = ["git2"] }
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
opt-level = "s"
